[package]
name = "fft"
version = "0.1.0"
authors = ["SteveXMH <39523898+Steve-xmh@users.noreply.github.com>"]
edition = "2024"
repository = "https://github.com/amll-dev/applemusic-like-lyrics"
description = "一个音频可视化模块，用于将传入的音频原始波形数据转换成便于观赏显示的频谱"
license = "GPL-3.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
arrayvec = "^0.7"
spectrum-analyzer = "1.5"
symphonia-core = "^0.5"
rubato = "^0.16"
instant = { version = "0.1", features = ["wasm-bindgen"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }
